Added name tag to Internet Gateway

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -540,6 +540,12 @@
             "Properties": {
                 "Tags": [
                     {
+                        "Key": "Name",
+                        "Value": {
+                            "Ref": "AWS::StackName"
+                        }
+                    },
+                    {
                         "Key": "Network",
                         "Value": "Public"
                     }
