Update Join to Sub

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -347,15 +347,7 @@
                         "NVirginiaRegionCondition",
                         "ec2.internal",
                         {
-                            "Fn::Join": [
-                                "",
-                                [
-                                    {
-                                        "Ref": "AWS::Region"
-                                    },
-                                    ".compute.internal"
-                                ]
-                            ]
+                            "Fn::Sub": "${AWS::Region}.compute.internal"
                         }
                     ]
                 },
